fix: align caption

--- a/css/media-320.css
+++ b/css/media-320.css
@@ -2,4 +2,7 @@
   .about-wrap {
     width: 287px;
   }
+  .security-btn a {
+    padding: 4px;
+  }
 }
